Change database at MySQL

--- a/ASP_NET_Core_Identity_at_HardWork/appsettings.json
+++ b/ASP_NET_Core_Identity_at_HardWork/appsettings.json
@@ -1,5 +1,13 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
-  }
+    "DefaultConnection": "Server=(localdb)\\mysqllocaldb;Database=userstoredb;"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*"
 }
