--- a/ASP_NET_Core_Identity_at_HardWork/Properties/launchSettings.json
+++ b/ASP_NET_Core_Identity_at_HardWork/Properties/launchSettings.json
@@ -1,7 +1,26 @@
 {
   "profiles": {
-    "SelfHost": {
+    "WSL": {
+      "commandName": "WSL2",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:5001",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://localhost:5001"
+      },
+      "distributionName": ""
+    },
+    "ASP_Net_Core": {
       "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:5001"
+    },
+    "ASP_Net_Core_Seed": {
+      "commandName": "Project",
+      "commandLineArgs": "/seed",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
