--- a/IdentityServer/Properties/launchSettings.json
+++ b/IdentityServer/Properties/launchSettings.json
@@ -13,7 +13,15 @@
     "IdentityServer_Seed": {
       "commandName": "Project",
       "commandLineArgs": "/seed",
-      "launchBrowser": false,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:5001;http://localhost:5162"
+    },
+    "IdentityServer_Delete": {
+      "commandName": "Project",
+      "commandLineArgs": "/delete",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
