--- a/API/API.csproj
+++ b/API/API.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IdentityServer_Common\IdentityServer_Common.csproj" />
+    <ProjectReference Include="..\IdentityServer_DAL\IdentityServer_DAL.csproj" />
+  </ItemGroup>
+
 </Project>
