--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionMySQL": "server=localhost;user=vitaliy;password=12345678;database=TestConnectionName;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
