--- a/IdentityServer_Common/IdentityServer_Common.csproj
+++ b/IdentityServer_Common/IdentityServer_Common.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
   </ItemGroup>
 
 </Project>
