--- a/IdentityServer_DAL/IdentityServer_DAL.csproj
+++ b/IdentityServer_DAL/IdentityServer_DAL.csproj
@@ -6,9 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.12" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IdentityServer_Common\IdentityServer_Common.csproj" />
   </ItemGroup>
 
 </Project>
