--- a/Client/Properties/launchSettings.json
+++ b/Client/Properties/launchSettings.json
@@ -1,14 +1,14 @@
-﻿{
+{
   "profiles": {
     "Client": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "https://localhost:5001",
-      "applicationUrl": "https://localhost:5001;http://localhost:5202",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:5001;http://localhost:5202"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -17,6 +17,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:50272/",
+      "sslPort": 44395
     }
   }
 }
