--- a/IdentityServer_FrontEnd/IdentityServer_FrontEnd.csproj
+++ b/IdentityServer_FrontEnd/IdentityServer_FrontEnd.csproj
@@ -6,6 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\assets\styles\animation.css" Link="Styles\animation.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\assets\styles\app.css" Link="Styles\app.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\assets\styles\button.css" Link="Styles\button.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.13" />
   </ItemGroup>
 
@@ -14,9 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Styles\app.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <Folder Include="Styles\" />
   </ItemGroup>
 
 </Project>
