--- a/Client/Properties/launchSettings.json
+++ b/Client/Properties/launchSettings.json
@@ -2,29 +2,13 @@
   "profiles": {
     "Client": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "https://localhost:5001",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5202"
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:5001",
+      "launchUrl": "https://localhost:6216/Pages/TakeAcces",
+      "applicationUrl": "https://localhost:6216;http://localhost:4124",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    }
-  },
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:50272/",
-      "sslPort": 44395
     }
   }
 }
