--- a/IdentityServer_FrontEnd/IdentityServer_FrontEnd.csproj
+++ b/IdentityServer_FrontEnd/IdentityServer_FrontEnd.csproj
@@ -6,27 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="..\assets\styles\animation.css" Link="Styles\animation.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\assets\styles\app.css" Link="Styles\app.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\assets\styles\button.css" Link="Styles\button.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.13" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\IdentityServer_DAL_MySQL\IdentityServer_DAL_MySQL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Styles\" />
+    <ProjectReference Include="..\IdentityServer_FrontEnd_Common\IdentityServer_FrontEnd_Common.csproj" />
   </ItemGroup>
 
 </Project>
