Change Client send request as button

--- a/IdentityServer_FrontEnd_Common/IdentityServer_FrontEnd_Common.csproj
+++ b/IdentityServer_FrontEnd_Common/IdentityServer_FrontEnd_Common.csproj
@@ -7,13 +7,13 @@
 
   <ItemGroup>
     <None Update="Styles\animation.css">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Styles\app.css">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Styles\button.css">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
