--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -1,14 +1,13 @@
-﻿{
-  "profiles": {
-    "IdentityServer_Client": {
+{
+    "API": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "https://localhost:6001/",
-      "applicationUrl": "http://localhost:6001; http://localhost:6021",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:6001; http://localhost:6021"
     }
   }
 }
