--- a/IdentityServer_FrontEnd/Properties/launchSettings.json
+++ b/IdentityServer_FrontEnd/Properties/launchSettings.json
@@ -1,15 +1,14 @@
-﻿{
+{
   "profiles": {
-    "IdentityServer_FrontEnd": {
+    "FrontEnd": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      //"launchUrl": "https://localhost:7216/Auth/Login",
       "launchUrl": "https://localhost:7216/Pages/MainPage",
-      "applicationUrl": "https://localhost:7216;http://localhost:5124",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://localhost:7216;http://localhost:5124"
+      },
+      "distributionName": ""
     }
   }
 }
