--- a/IdentityServer_FrontEnd/IdentityServer_FrontEnd.csproj
+++ b/IdentityServer_FrontEnd/IdentityServer_FrontEnd.csproj
@@ -11,7 +11,18 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IdentityServer_DAL_MySQL\IdentityServer_DAL_MySQL.csproj" />
-    <ProjectReference Include="..\IdentityServer_FrontEnd_Common\IdentityServer_FrontEnd_Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Styles\animation.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Styles\app.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Styles\button.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
