--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -15,6 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Properties\launchSettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Styles\animation.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
