--- a/IdentityServer_DAL_MySQL/IdentityServer_DAL_MySQL.csproj
+++ b/IdentityServer_DAL_MySQL/IdentityServer_DAL_MySQL.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\IdentityServer_DAL\IdentityServer_DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Properties\launchSettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
