--- a/IdentityServer_FrontEnd/IdentityServer_FrontEnd.csproj
+++ b/IdentityServer_FrontEnd/IdentityServer_FrontEnd.csproj
@@ -14,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Properties\launchSettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Styles\animation.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
