--- a/IdentityServer_DAL_MySQL/IdentityServer_DAL_MySQL.csproj
+++ b/IdentityServer_DAL_MySQL/IdentityServer_DAL_MySQL.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -14,12 +14,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IdentityServer_DAL\IdentityServer_DAL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Properties\launchSettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
