--- a/IdentityServer_FrontEnd_Common/IdentityServer_FrontEnd_Common.csproj
+++ b/IdentityServer_FrontEnd_Common/IdentityServer_FrontEnd_Common.csproj
@@ -1,20 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="Styles\animation.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Styles\app.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Styles\button.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <ProjectReference Include="..\IdentityServer_Common\IdentityServer_Common.csproj" />
   </ItemGroup>
 
 </Project>
