--- a/IdentityServer/Properties/launchSettings.json
+++ b/IdentityServer/Properties/launchSettings.json
@@ -3,7 +3,9 @@
     "IdentityServer": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:5001/Hello",
+      "launchUrl": "https://localhost:5001/.well-known/openid-configuration",
+      //"launchUrl": "https://localhost:5001/Hello",
+      //"launchUrl": "https://localhost:5001/Auth/Login",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
